[package]
authors = ["Without Boats <woboats@gmail.com>"]
license = "AGPL-3.0+"
name = "scaffolding-terminal"
version = "0.1.0"

[dependencies]
gdk = "0.2.0"
cairo-rs = "0.0.7"
gtk = "0.0.6"
toml = "0.1"

[dependencies.notty]
path = ".."

[dependencies.notty-cairo]
path = "../notty-cairo"

[dependencies.tty]
path = "tty"
