[package]
authors = ["Without Boats <woboats@gmail.com>"]
license = "AGPL-3.0+"
name = "scaffolding-terminal"
version = "0.1.0"

[dependencies]
cairo-rs = "0.0.8"
gdk = "0.3.0"
glib = "0.0.8"
gtk = "0.0.7"
gtk-sys = "0.3.0"
toml = "0.1"

[dependencies.notty]
path = ".."

[dependencies.notty-cairo]
path = "../notty-cairo"

[dependencies.tty]
path = "tty"
