[package]
authors = ["Without Boats <woboats@gmail.com>"]
license = "AGPL-3.0+"
name = "scaffolding-terminal"
version = "0.1.0"

[dependencies]
cairo-rs = "0.1"
gdk = "0.5"
glib = "0.1"
gtk-sys = "0.3.1"
toml = "0.1"

[dependencies.gtk]
version = "0.1"
features = ["v3_16"]

[dependencies.notty]
path = ".."

[dependencies.notty-cairo]
path = "../notty-cairo"

[dependencies.tty]
path = "tty"
